Switched school order (Hopkins first), fixed misalignment of Day-Of-Week columns with slots

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -131,6 +131,7 @@ input[type="text"]:focus {
 }
 #calendar-inner {
   height: 835px;
+  overflow-y:hidden;
 }
 .pure-pusher-container {
   margin-bottom:50px;
@@ -378,7 +379,11 @@ input:-moz-placeholder::before  { font-family: fontAwesome; content:'\f002  ';
   #menu-btn {
     font-size:1.4vw;
   }
-
+  .side-container{
+    left:0% !important;
+    width:95% !important;
+    z-index:4000;
+  }
 }
 @media screen and (max-width: 811px) {
   .fc-event-container {
@@ -428,6 +433,7 @@ input:-moz-placeholder::before  { font-family: fontAwesome; content:'\f002  ';
   #menu-btn {
     padding-left:4px;
   }
+
 
 
 }
